--- a/style/style_general.css
+++ b/style/style_general.css
@@ -40,7 +40,7 @@ HELLGRAU (BACKGROUND): #F5F5F5
 
 
 /* centers overlay */
-.general-overlay{
+.general-overlay {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -166,6 +166,7 @@ HELLGRAU (BACKGROUND): #F5F5F5
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow: auto;
 }
 
 .main-container h1 {
@@ -186,20 +187,20 @@ HELLGRAU (BACKGROUND): #F5F5F5
         min-height: 100vh;
     }
 
-    .main{
+    .main {
         padding: 90px 116px 90px 116px;
     }
 }
 
 @media (max-width: 820px) {
-    .main{
+    .main {
         padding: 90px 70px 90px 70px;
 
     }
 }
 
 @media (max-width: 700px) {
-    .main{
+    .main {
         padding: 90px 33px 90px 33px;
 
     }
