--- a/style/style_summary.css
+++ b/style/style_summary.css
@@ -6,6 +6,10 @@
 
 }
 
+.summary-outer-div {
+    min-height: calc(100vh - 172px);
+}
+
 .summary-container {
     display: flex;
     flex-direction: column;
@@ -282,9 +286,9 @@
         height: 110px;
     }
 
-    .col-1 > span,
-    .col-2 .bold ~ span,
-    .col-3 .bold ~ span {
+    .col-1>span,
+    .col-2 .bold~span,
+    .col-3 .bold~span {
         font-size: 14px;
     }
 
